--- a/index.html
+++ b/index.html
@@ -421,6 +421,33 @@
     <p class="exhibit-caption">This exhibit presents key income statement, balance sheet, and cash flow figures used to calculate and interpret the financial ratios discussed in this analysis.</p>
   </div>
 </section>
+<section id="exhibits" style="background:#FAF8F3;">
+  <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:1.5rem;">
+    Exhibits
+  </h3>
+
+  <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
+    
+    <p style="font-weight:600;margin-bottom:0.75rem;">
+      Exhibit A: Selected Financial Ratios (2022)
+    </p>
+    <img 
+      src="exhibit-a-ratios.png" 
+      alt="Exhibit A Financial Ratios"
+      style="width:100%;border-radius:12px;box-shadow:0 10px 28px rgba(0,0,0,0.12);margin-bottom:2rem;"
+    />
+
+    <p style="font-weight:600;margin-bottom:0.75rem;">
+      Exhibit B: Industry Benchmark Comparison
+    </p>
+    <img 
+      src="exhibit-b-ratios.png" 
+      alt="Exhibit B Industry Benchmarks"
+      style="width:100%;border-radius:12px;box-shadow:0 10px 28px rgba(0,0,0,0.12);"
+    />
+
+  </div>
+</section>
 
 <section id="references" class="section">
   <div style="height:1px;background:rgba(15,28,46,0.15);max-width:1100px;margin:0 auto 2rem;"></div>
