--- a/index.html
+++ b/index.html
@@ -1,244 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Black Knight, Inc. | Financial Analysis 2022</title>
+  <meta charset="UTF-8" />
+  <title>Black Knight, Inc. | Financial Ratio Analysis (2022)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-<style>
-:root {
-  --cream:#f6f1e7;
-  --navy:#0f1c2e;
-  --gold:#c9a24d;
-}
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: #FAF8F3;
+      color: #1f2933;
+      line-height: 1.6;
+    }
 
-* { box-sizing:border-box; margin:0; padding:0; }
+    header {
+      background: #FAF8F3;
+      padding: 3rem 2rem 2rem;
+      text-align: center;
+      border-bottom: 2px solid #c9a24d;
+    }
 
-body {
-  font-family:'Inter',sans-serif;
-  background:#FAF8F3;
-  color:var(--navy);
-}
+    header img {
+      max-width: 260px;
+      margin-bottom: 1rem;
+    }
 
-header {
-  background:var(--cream);
-  padding:5rem 2rem 4rem;
-  text-align:center;
-}
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      margin: 0.5rem 0;
+      color: #c85a17;
+    }
 
-.hero-logo {
-  max-width:520px;
-  width:90%;
-  margin:1.5rem auto 1.25rem;
-  display:block;
-  filter:drop-shadow(0 6px 18px rgba(0,0,0,0.12));
-}
+    header p {
+      font-size: 1rem;
+      color: #4b5563;
+    }
 
-.meta {
-  margin-top:1rem;
-  font-size:0.95rem;
-  color:#374151;
-}
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      font-size: 0.85rem;
+      margin: 1.5rem 0 2rem;
+    }
 
-.divider {
-  width:60px;
-  height:4px;
-  background:var(--gold);
-  margin:2.5rem auto 0;
-}
+    nav a {
+      text-decoration: none;
+      color: #1f2933;
+      font-weight: 500;
+    }
 
-/* NAV */
-.navbar {
-  position:sticky;
-  top:0;
-  z-index:1000;
-  background:rgba(246,241,231,0.95);
-  backdrop-filter:blur(8px);
-  border-bottom:1px solid rgba(0,0,0,0.05);
-}
+    section {
+      padding: 3rem 10%;
+      margin-bottom: 2rem;
+    }
 
-.nav-inner {
-  max-width:1100px;
-  margin:auto;
-  padding:0.6rem 2rem;
-  display:flex;
-  justify-content:center;
-  gap:1.5rem;
-  font-size:0.75rem;
-  letter-spacing:0.1em;
-  text-transform:uppercase;
-}
+    h2, h3 {
+      font-family: 'Playfair Display', serif;
+      color: #c85a17;
+    }
 
-.nav-inner a {
-  text-decoration:none;
-  color:var(--navy);
-  font-weight:600;
-}
+    h2 {
+      font-size: 2.4rem;
+      margin-bottom: 1.5rem;
+    }
 
-.nav-inner a:hover { color:#e4572e; }
+    h3 {
+      font-size: 1.9rem;
+      margin-bottom: 1rem;
+    }
 
-/* SECTIONS */
-section {
-  padding:3rem 2rem;
-  max-width:1100px;
-  margin:auto;
-  background:#FAF8F3;
-}
+    .kpi-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
 
-h3 {
-  font-family:'Playfair Display',serif;
-  font-size:2.2rem;
-  margin-bottom:1.5rem;
-}
+    .kpi-card {
+      background: white;
+      padding: 1.5rem;
+      border-radius: 16px;
+      border-top: 5px solid #c9a24d;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      transition: transform 0.3s ease;
+    }
 
-/* KPI CARDS */
-.kpi-grid {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
-  gap:1.75rem;
-}
+    .kpi-card:hover {
+      transform: translateY(-5px);
+    }
 
-.kpi-card {
-  background:#ffffff;
-  border-radius:16px;
-  padding:2rem 1.75rem;
-  box-shadow:0 14px 32px rgba(0,0,0,0.08);
-  border-top:6px solid var(--gold);
-  transition:transform 0.25s ease, box-shadow 0.25s ease;
-}
+    .kpi-card h4 {
+      margin: 0;
+      font-size: 0.85rem;
+      text-transform: uppercase;
+      color: #6b7280;
+    }
 
-.kpi-card:hover {
-  transform:translateY(-6px);
-  box-shadow:0 24px 48px rgba(0,0,0,0.12);
-}
+    .kpi-card p {
+      font-size: 1.8rem;
+      font-weight: 600;
+      margin-top: 0.5rem;
+    }
 
-.kpi-label {
-  font-size:0.75rem;
-  letter-spacing:0.12em;
-  text-transform:uppercase;
-  color:#6b7280;
-  font-weight:600;
-}
+    .context-box {
+      background: #ffffff;
+      padding: 2rem;
+      border-radius: 18px;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.08);
+    }
 
-.kpi-value {
-  font-size:2.3rem;
-  font-weight:700;
-}
+    .context-cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+      gap: 1.2rem;
+      margin-top: 1.5rem;
+    }
 
-.kpi-sub {
-  font-size:0.85rem;
-  color:#6b7280;
-}
+    .info-card {
+      background: #f6f1e7;
+      padding: 1.2rem;
+      border-radius: 14px;
+      font-size: 0.9rem;
+    }
 
-/* RATIO GROUPS */
-.ratio-group {
-  background:var(--cream);
-  padding:2rem;
-  border-radius:18px;
-  margin-bottom:2.5rem;
-}
+    .exhibit img {
+      width: 100%;
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+      margin-bottom: 2rem;
+    }
 
-.ratio-group-title {
-  font-family:'Playfair Display',serif;
-  font-size:1.5rem;
-  margin-bottom:1rem;
-}
+    footer {
+      border-top: 1px solid #ddd;
+      padding: 2rem 10%;
+      font-size: 0.8rem;
+      color: #4b5563;
+    }
 
-.ratio-row {
-  display:grid;
-  grid-template-columns:2fr 1fr 1.2fr 1fr;
-  background:#fff;
-  padding:1.25rem 1.5rem;
-  border-radius:12px;
-  margin-bottom:0.75rem;
-  box-shadow:0 6px 18px rgba(0,0,0,0.05);
-  transition:transform .25s, box-shadow .25s;
-}
+    /* Scroll Reveal */
+    .reveal {
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.8s ease;
+    }
 
-.ratio-row:hover {
-  transform:translateY(-3px);
-  box-shadow:0 14px 32px rgba(0,0,0,0.10);
-}
-
-.ratio-badge {
-  justify-self:end;
-  padding:.35rem .75rem;
-  border-radius:999px;
-  font-size:.75rem;
-  font-weight:600;
-}
-
-.good { background:#e6f4ee; color:#1f7a5a; }
-.neutral { background:#f2efe9; color:#7a5a1f; }
-.weak { background:#f7eaea; color:#a33a2b; }
-
-/* ANALYSIS GRID */
-.analysis-grid {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(420px,1fr));
-  gap:2rem;
-}
-
-/* EXHIBITS */
-.exhibit-img {
-  width:100%;
-  border-radius:12px;
-  box-shadow:0 10px 28px rgba(0,0,0,0.12);
-  margin-bottom:2rem;
-}
-
-/* CITATIONS */
-.citation {
-  cursor:help;
-  font-size:.75em;
-  vertical-align:super;
-  color:#7a5a1f;
-}
-
-.citation::after {
-  content:attr(data-cite);
-  position:absolute;
-  background:#0f1c2e;
-  color:#fff;
-  padding:.6rem .75rem;
-  border-radius:8px;
-  font-size:.75rem;
-  width:260px;
-  opacity:0;
-  pointer-events:none;
-  transform:translateY(-6px);
-}
-
-.citation:hover::after { opacity:1; }
-
-/* SCROLL REVEAL */
-.reveal {
-  opacity:0;
-  transform:translateY(30px);
-  transition:opacity .8s ease, transform .8s ease;
-}
-
-.reveal.visible {
-  opacity:1;
-  transform:translateY(0);
-}
-</style>
-
-<script>
-document.addEventListener('DOMContentLoaded',()=>{
-  const els=document.querySelectorAll('.reveal');
-  const obs=new IntersectionObserver(e=>{
-    e.forEach(i=>i.isIntersecting && i.target.classList.add('visible'));
-  },{threshold:.12});
-  els.forEach(el=>obs.observe(el));
-});
-</script>
+    .reveal.active {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  </style>
 </head>
 
 <body>
 
 <header>
-<img src="https://nationalmortgageprofessional.com/sites/default/files/styles/article_full/public/2020-05/Black_Knight_New_Logo_09_13_19.png" class="hero-logo" alt="Black Knight, Inc. Logo">
-<div class="meta">Black Knight, Inc. | Soft
+  <img src="https://nationalmortgageprofessional.com/sites/default/files/styles/article_full/public/2020-05/Black_Knight_New_Logo_09_13_19.png" alt="Black Knight Logo">
+  <h1>Financial Ratio Analysis</h1>
+  <p>Black Knight, Inc. | Software & Programming Industry | Fiscal Year 2022</p>
+</header>
+
+<nav>
+  <a href="#dashboard">Dashboard</a>
+  <a href="#context">Company Context</a>
+  <a href="#analysis">Ratio Analysis</a>
+  <a href="#strategy">Strategy</a>
+  <a href="#exhibits">Exhibits</a>
+</nav>
+
+<section id="dashboard" class="reveal">
+  <h2>Key Financial Dashboard</h2>
+  <div class="kpi-grid">
+    <div class="kpi-card"><h4>Profit Margin</h4><p>29.1%</p></div>
+    <div class="kpi-card"><h4>Return on Assets</h4><p>7.8%</p></div>
+    <div class="kpi-card"><h4>Return on Equity</h4><p>17.6%</p></div>
+    <div class="kpi-card"><h4>Current Ratio</h4><p>1.27</p></div>
+  </div>
+</section>
+
+<section id="context" class="reveal">
+  <h2>Company & Financial Context</h2>
+  <div class="context-box">
+    <p>
+      Black Knight, Inc. operates as a software, data, and analytics provider supporting the mortgage lending, servicing,
+      and real estate finance markets. The company delivers integrated, platform-based solutions that support clients
+      across the homeownership lifecycle, emphasizing recurring revenue and long-term client relationships.
+    </p>
+
+    <div class="context-cards">
+      <div class="info-card"><strong>Company Size:</strong><br>5,001–10,000 employees</div>
+      <div class="info-card"><strong>Associated Members:</strong><br>2,688</div>
+      <div class="info-card"><strong>Headquarters:</strong><br>Jacksonville, FL</div>
+      <div class="info-card"><strong>Industry:</strong><br>IT Services & Consulting</div>
+    </div>
+  </div>
+</section>
+
+<section id="strategy" class="reveal">
+  <h2>Strategic Conclusions & Recommendations</h2>
+  <div class="context-box">
+    <p>
+      Black Knight demonstrates strong profitability relative to industry benchmarks, supported by a scalable software
+      model and recurring revenue streams. The company maintains balanced leverage and sufficient interest coverage,
+      allowing continued investment without excessive financial risk.
+    </p>
+    <p>
+      Strategically, Black Knight should continue reinvesting in proprietary platforms and analytics capabilities while
+      monitoring liquidity and leverage levels as macroeconomic conditions evolve.
+    </p>
+  </div>
+</section>
+
+<section id="exhibits" class="reveal">
+  <h2>Exhibits</h2>
+
+  <div class="exhibit">
+    <p><strong>Exhibit A: Selected Financial Ratios (2022)</strong></p>
+    <img src="exhibit-a-ratios.png" alt="Exhibit A Ratios">
+  </div>
+
+  <div class="exhibit">
+    <p><strong>Exhibit B: Industry Benchmark Comparison</strong></p>
+    <img src="exhibit-b-ratios.png" alt="Exhibit B Benchmarks">
+  </div>
+</section>
+
+<footer>
+  <p><strong>References</strong></p>
+  <p>Black Knight, Inc. (2023). <em>Form 10-K: Annual Report for the Fiscal Year Ended December 31, 2022</em>. U.S. Securities and Exchange Commission.</p>
+  <p>Investopedia. (2024). Financial Ratio Analysis.</p>
+  <p>NYU Stern School of Business. Industry Financial Ratios.</p>
+</footer>
+
+<script>
+  const reveals = document.querySelectorAll(".reveal");
+  window.addEventListener("scroll", () => {
+    reveals.forEach(el => {
+      const top = el.getBoundingClientRect().top;
+      if (top < window.innerHeight - 100) {
+        el.classList.add("active");
+      }
+    });
+  });
+</script>
+
+</body>
+</html>
