--- a/index.html
+++ b/index.html
@@ -405,20 +405,38 @@
   </div>
 </section>
 
-<section id="exhibits" class="section reveal">
-  <h2>Exhibits & Supporting Financial Data</h2>
-  <p class="section-intro">The following exhibits present selected financial ratios and consolidated financial statement metrics for Black Knight, Inc. These tables support the ratio analysis and interpretations discussed throughout the dashboard and are derived from the company’s Form 10‑K filings.</p>
+<section id="exhibits" style="background:#FAF8F3;">
+  <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:1.5rem;">
+    Exhibits &amp; Supporting Financial Data
+  </h3>
 
-  <div class="exhibit-card">
-    <h3>Exhibit A: Selected Financial Performance Ratios (As of December 31, 2022)</h3>
-    <img src="./861e7c04-d443-4466-be0c-c29666e04979.png" alt="Selected Financial Performance Ratios for Black Knight, Inc." class="exhibit-image" />
-    <p class="exhibit-caption">This exhibit summarizes liquidity, leverage, efficiency, and profitability ratios for Black Knight, Inc. compared to Software & Programming industry benchmarks.</p>
-  </div>
+  <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
 
-  <div class="exhibit-card">
-    <h3>Exhibit B: Selected Financial Metrics from Consolidated Financial Statements (2021–2022)</h3>
-    <img src="./3d69b0ef-17d0-4eda-85c5-6ebfb15af5fe.png" alt="Selected Financial Metrics from Consolidated Financial Statements" class="exhibit-image" />
-    <p class="exhibit-caption">This exhibit presents key income statement, balance sheet, and cash flow figures used to calculate and interpret the financial ratios discussed in this analysis.</p>
+    <p style="line-height:1.7;color:#374151;">
+      The following exhibits provide supporting financial data used in the ratio analysis of Black Knight, Inc.
+      These exhibits summarize key financial ratios and benchmark comparisons referenced throughout this analysis.
+    </p>
+
+    <p style="line-height:1.7;color:#374151;margin-top:1.5rem;">
+      <strong>Exhibit A: Selected Financial Ratios (Fiscal Year 2022)</strong>
+    </p>
+
+    <img 
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit-a-ratios.png"
+      alt="Exhibit A – Black Knight Financial Ratios"
+      style="width:100%;max-width:900px;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin:1rem 0 2rem;"
+    />
+
+    <p style="line-height:1.7;color:#374151;margin-top:1.5rem;">
+      <strong>Exhibit B: Industry Benchmark Comparison</strong>
+    </p>
+
+    <img 
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit-b-ratios.png"
+      alt="Exhibit B – Industry Benchmark Ratios"
+      style="width:100%;max-width:900px;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-top:1rem;"
+    />
+
   </div>
 </section>
 
