--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   </div>
 </section>
 
-<section id="context" style="background:#FAF8F3;">
+<section id="context" class="reveal" style="background:#FAF8F3;">
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:1.5rem;">Company &amp; Financial Context</h3>
 
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1.25rem;margin-bottom:2rem;">
