--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:0.5rem;">Key Financial Dashboard</h3>
 
   <p style="max-width:700px;color:#4b5563;margin-bottom:2.5rem;"><p style="white-space: nowrap;">
-  Snapshot of Black Knight, Inc.'s core financial performance indicators, highlighting scale, profitability, and shareholder returns.
-</p>
+  Snapshot of Black Knight, Inc.'s core financial performance indicators, highlighting scale, profitability, and shareholder returns.</p>
 
   
   <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:1.75rem;">
