--- a/index.html
+++ b/index.html
@@ -455,6 +455,10 @@
   <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Investopedia. (n.d.). <em>Financial ratio analysis.</em>. https://www.investopedia.com/terms/r/ratioanalysis.asp</p>
   <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Investopedia. (n.d.). <em>Liquidity ratios.</em>. https://www.investopedia.com/terms/l/liquidityratio.asp</p>
   <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Investopedia. (n.d.). <em>Profitability ratios.</em>. https://www.investopedia.com/terms/p/profitabilityratios.asp</p>
+
+  <footer>
+  Financial Ratio Analysis Project • Prepared by Jacquelyn Swindell • Academic Use Only
+</footer>  
   
 <style>
   .ratio-card {
