--- a/index.html
+++ b/index.html
@@ -421,28 +421,81 @@
       These exhibits summarize key financial ratios and benchmark comparisons referenced throughout this analysis.
     </p>
 
-    <p style="line-height:1.7;color:#374151;margin-top:1.5rem;">
+ <section id="exhibits" style="background:#FAF8F3;">
+  <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:1.5rem;">
+    Exhibits &amp; Supporting Financial Data
+  </h3>
+
+  <div class="ratio-group" style="background:#f6f1e7;padding:2.5rem;border-radius:18px;">
+
+    <p style="line-height:1.7;color:#374151;margin-bottom:2rem;">
+      The following exhibits provide supporting financial data used in the ratio analysis of Black Knight, Inc.
+      These exhibits summarize key financial ratios and benchmark comparisons referenced throughout this analysis.
+    </p>
+
+    <!-- Exhibit A -->
+    <p style="line-height:1.7;color:#374151;">
       <strong>Exhibit A: Selected Financial Ratios (Fiscal Year 2022)</strong>
     </p>
-
     <img 
-      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit-a-ratios.png"
-      alt="Exhibit A – Black Knight Financial Ratios"
-      style="width:100%;max-width:900px;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin:1rem 0 2rem;"
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit_a_ratios.png"
+      alt="Exhibit A – Selected Financial Ratios"
+      style="width:100%;max-width:900px;border-radius:14px;
+             box-shadow:0 10px 30px rgba(0,0,0,0.12);
+             margin:1rem 0 2.5rem;"
     />
 
-    <p style="line-height:1.7;color:#374151;margin-top:1.5rem;">
+    <!-- Exhibit B -->
+    <p style="line-height:1.7;color:#374151;">
       <strong>Exhibit B: Industry Benchmark Comparison</strong>
     </p>
-
     <img 
-      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit-b-ratios.png"
-      alt="Exhibit B – Industry Benchmark Ratios"
-      style="width:100%;max-width:900px;border-radius:14px;box-shadow:0 10px 30px rgba(0,0,0,0.12);margin-top:1rem;"
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit_b_ratios.png"
+      alt="Exhibit B – Industry Benchmark Comparison"
+      style="width:100%;max-width:900px;border-radius:14px;
+             box-shadow:0 10px 30px rgba(0,0,0,0.12);
+             margin:1rem 0 2.5rem;"
+    />
+
+    <!-- Exhibit C -->
+    <p style="line-height:1.7;color:#374151;">
+      <strong>Exhibit C: Liquidity Ratio Breakdown</strong>
+    </p>
+    <img 
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit_c_ratios.png"
+      alt="Exhibit C – Liquidity Ratios"
+      style="width:100%;max-width:900px;border-radius:14px;
+             box-shadow:0 10px 30px rgba(0,0,0,0.12);
+             margin:1rem 0 2.5rem;"
+    />
+
+    <!-- Exhibit D -->
+    <p style="line-height:1.7;color:#374151;">
+      <strong>Exhibit D: Efficiency Ratio Breakdown</strong>
+    </p>
+    <img 
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit_d_ratios.png"
+      alt="Exhibit D – Efficiency Ratios"
+      style="width:100%;max-width:900px;border-radius:14px;
+             box-shadow:0 10px 30px rgba(0,0,0,0.12);
+             margin:1rem 0 2.5rem;"
+    />
+
+    <!-- Exhibit E -->
+    <p style="line-height:1.7;color:#374151;">
+      <strong>Exhibit E: Profitability Ratio Breakdown</strong>
+    </p>
+    <img 
+      src="https://jp-jacquelyn.github.io/Swindell_Jacquelyn_BKI_Analysis/exhibit_e_ratios.png"
+      alt="Exhibit E – Profitability Ratios"
+      style="width:100%;max-width:900px;border-radius:14px;
+             box-shadow:0 10px 30px rgba(0,0,0,0.12);
+             margin-top:1rem;"
     />
 
   </div>
 </section>
+
 
 <section id="references" class="section">
   <div style="height:1px;background:rgba(15,28,46,0.15);max-width:1100px;margin:0 auto 2rem;"></div>
@@ -458,6 +511,7 @@
 
    <div style="height:1px;background:rgba(15,28,46,0.15);max-width:1100px;margin:0 auto 2rem;"></div>
   <footer>
+    <h3 style="font-family:'Playfair Display',serif;font-size:1.5rem;margin-bottom:0.75rem;">References</h3>
   Financial Ratio Analysis Project • Prepared by Jacquelyn Swindell • Academic Use Only
 </footer>  
   
