--- a/index.html
+++ b/index.html
@@ -196,6 +196,13 @@
   border-radius: 16px;
   box-shadow: 0 30px 80px rgba(0,0,0,0.4);
 }
+.ratio-note {
+  margin-top: 0.75rem;
+  margin-bottom: 2.5rem;
+  font-size: 0.95rem;
+  color: #6b7280; /* muted gray */
+  max-width: 900px;
+}
 
 </style>
 
@@ -254,6 +261,8 @@
     <a href="#ratios">Ratios</a>
     <a href="#analysis">Analysis</a>
     <a href="#strategy">Strategy</a>
+    <a href="#exhibits">Exhibits</a>
+
   </div>
 </nav>
 
@@ -331,6 +340,9 @@
 
 <section id="ratios" class="reveal" style="background:#FAF8F3;">
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:2rem;">Ratio Analysis Dashboard</h3>
+<p class="ratio-note">
+  Comparative assessments are based on the Software & Programming industry ratios provided in the exhibits below.
+</p>
 
   <!-- Liquidity -->
   <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
@@ -339,14 +351,14 @@
     <div class="ratio-row">
       <div class="ratio-name">Current Ratio</div>
       <div class="ratio-value">1.27</div>
-      <div class="ratio-industry">Industry: ~1.6</div>
+      <div class="ratio-industry">Industry: 1.96</div>
       <div class="ratio-badge neutral">MODERATE</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Quick Ratio</div>
       <div class="ratio-value">0.76</div>
-      <div class="ratio-industry">Industry: ~1.1</div>
+      <div class="ratio-industry">Industry: 1.76</div>
       <div class="ratio-badge weak">BELOW AVG</div>
     </div>
     
@@ -359,14 +371,14 @@
     <div class="ratio-row">
       <div class="ratio-name">Debt Ratio</div>
       <div class="ratio-value">0.55</div>
-      <div class="ratio-industry">Industry: ~0.57</div>
+      <div class="ratio-industry">Industry: 0.47</div>
       <div class="ratio-badge good">BALANCED</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Times Interest Earned</div>
       <div class="ratio-value">2.77×</div>
-      <div class="ratio-industry">Benchmark: &gt;2.0</div>
+      <div class="ratio-industry">Benchmark: &gt;6.50</div>
       <div class="ratio-badge good">ADEQUATE</div>
     </div>
   </div>
@@ -378,14 +390,14 @@
     <div class="ratio-row">
       <div class="ratio-name">Receivables Turnover</div>
       <div class="ratio-value">8.02</div>
-      <div class="ratio-industry">Industry: ~7–8</div>
+      <div class="ratio-industry">Industry: 6.80</div>
       <div class="ratio-badge good">EFFICIENT</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Total Asset Turnover</div>
       <div class="ratio-value">0.27</div>
-      <div class="ratio-industry">Industry: ~0.5+</div>
+      <div class="ratio-industry">Industry: 0.80</div>
       <div class="ratio-badge neutral">INTANGIBLE‑HEAVY</div>
     </div>
     
@@ -398,21 +410,21 @@
     <div class="ratio-row">
       <div class="ratio-name">Profit Margin</div>
       <div class="ratio-value">29.1%</div>
-      <div class="ratio-industry">Market: ~5%</div>
+      <div class="ratio-industry">Market: 19%</div>
       <div class="ratio-badge good">STRONG</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Return on Assets</div>
       <div class="ratio-value">7.8%</div>
-      <div class="ratio-industry">Market: ~5%</div>
+      <div class="ratio-industry">Market: 12%</div>
       <div class="ratio-badge good">EFFICIENT</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Return on Equity</div>
       <div class="ratio-value">17.6%</div>
-      <div class="ratio-industry">Market: ~12–15%</div>
+      <div class="ratio-industry">Market: 25%</div>
       <div class="ratio-badge good">STRONG</div>
     </div>
   </div>
