--- a/index.html
+++ b/index.html
@@ -352,14 +352,14 @@
       <div class="ratio-name">Current Ratio</div>
       <div class="ratio-value">1.27</div>
       <div class="ratio-industry">Industry: 1.96</div>
-      <div class="ratio-badge neutral">MODERATE</div>
+      <div class="ratio-badge neutral">ADEQUATE-BELOW INDUSTRY</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Quick Ratio</div>
       <div class="ratio-value">0.76</div>
       <div class="ratio-industry">Industry: 1.76</div>
-      <div class="ratio-badge weak">BELOW AVG</div>
+      <div class="ratio-badge weak">RISK</div>
     </div>
     
   </div>
@@ -372,14 +372,14 @@
       <div class="ratio-name">Debt Ratio</div>
       <div class="ratio-value">0.55</div>
       <div class="ratio-industry">Industry: 0.47</div>
-      <div class="ratio-badge good">BALANCED</div>
+      <div class="ratio-badge neutral">ELEVATED LEVERAGE</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Times Interest Earned</div>
       <div class="ratio-value">2.77×</div>
       <div class="ratio-industry">Benchmark: &gt;6.50</div>
-      <div class="ratio-badge good">ADEQUATE</div>
+      <div class="ratio-badge weak">BELOW AVG</div>
     </div>
   </div>
 
@@ -398,7 +398,7 @@
       <div class="ratio-name">Total Asset Turnover</div>
       <div class="ratio-value">0.27</div>
       <div class="ratio-industry">Industry: 0.80</div>
-      <div class="ratio-badge neutral">INTANGIBLE‑HEAVY</div>
+      <div class="ratio-badge weak">INEFFICIENT</div>
     </div>
     
   </div>
@@ -418,14 +418,14 @@
       <div class="ratio-name">Return on Assets</div>
       <div class="ratio-value">7.8%</div>
       <div class="ratio-industry">Market: 12%</div>
-      <div class="ratio-badge good">EFFICIENT</div>
+      <div class="ratio-badge weak">BELOW AVG</div>
     </div>
 
     <div class="ratio-row">
       <div class="ratio-name">Return on Equity</div>
       <div class="ratio-value">17.6%</div>
       <div class="ratio-industry">Market: 25%</div>
-      <div class="ratio-badge good">STRONG</div>
+      <div class="ratio-badge neutral">MODERATE</div>
     </div>
   </div>
 </section>
