--- a/index.html
+++ b/index.html
@@ -436,22 +436,22 @@
   <div class="analysis-grid">
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Liquidity Analysis</div>
-      <p style="line-height:1.7;color:#374151;">Black Knight’s liquidity ratios suggest that the company is able to meet its short-term obligations, even though both the current and quick ratios are slightly below typical industry averages. A current ratio above 1 generally indicates that a firm has enough current assets to cover short-term liabilities, while the quick ratio provides a more conservative view of liquidity <span class="citation" data-cite="Investopedia — Current Ratio; Investopedia — Quick Ratio">⁴</span>.</p>
+      <p style="line-height:1.7;color:#374151;">Black Knight’s liquidity ratios suggest that while the company can meet its short-term obligations, its liquidity position is weaker than industry norms. The current ratio above 1 indicates basic short-term coverage; however, the quick ratio below 1 signals limited immediate liquidity compared to peers. This suggests a tighter liquidity position and a greater reliance on ongoing cash flows rather than liquid assets. <span class="citation" data-cite="Investopedia — Current Ratio; Investopedia — Quick Ratio">⁴</span>.</p>
     </div>
 
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Leverage Analysis</div>
-      <p style="line-height:1.7;color:#374151;">The company’s leverage ratios indicate a balanced use of debt financing. Black Knight’s debt ratio aligns closely with industry norms, and its interest coverage suggests that operating income is sufficient to meet interest obligations, reducing financial risk <span class="citation" data-cite="Investopedia — Debt Ratio; Investopedia — Times Interest Earned">⁵</span>.</p>
+      <p style="line-height:1.7;color:#374151;">Black Knight relies more heavily on debt than the average company in its industry. Although it is still able to cover its interest payments, its times interest earned ratio is well below industry norms, leaving less room for error if earnings decline. As a result, the company is more exposed to fluctuations in operating income and carries higher financial risk compared to its peers. <span class="citation" data-cite="Investopedia — Debt Ratio; Investopedia — Times Interest Earned">⁵</span>.</p>
     </div>
 
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Efficiency Analysis</div>
-      <p style="line-height:1.7;color:#374151;">Efficiency ratios highlight both strengths and structural characteristics of Black Knight’s business model. Receivables turnover aligns with industry expectations, while lower total asset turnover is typical for software companies whose assets are largely intangible rather than physical <span class="citation" data-cite="Investopedia — Receivables Turnover; Investopedia — Asset Turnover Ratio">⁶</span>.</p>
+      <p style="line-height:1.7;color:#374151;">Black Knight’s efficiency ratios point to a mixed picture. On the positive side, the company collects receivables faster than the industry average, which suggests strong credit management and effective cash collection practices. At the same time, total asset turnover is well below industry norms, indicating that the company generates less revenue per dollar of assets. This is not unusual for a software-focused firm like Black Knight, where a large portion of value comes from intangible assets rather than physical ones, but it still highlights an area where overall efficiency lags behind peers. <span class="citation" data-cite="Investopedia — Receivables Turnover; Investopedia — Asset Turnover Ratio">⁶</span>.</p>
     </div>
 
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Profitability Analysis</div>
-      <p style="line-height:1.7;color:#374151;">Profitability represents one of Black Knight’s strongest financial areas. The company’s profit margin, return on assets, and return on equity exceed general market averages, indicating effective cost control and efficient use of capital, which are common among scalable software businesses <span class="citation" data-cite="Investopedia — Profit Margin; Investopedia — ROA; Investopedia — ROE">⁷</span>.</p>
+      <p style="line-height:1.7;color:#374151;">Profitability stands out as one of Black Knight’s stronger areas, particularly its profit margin, which exceeds the industry average and reflects solid cost control and pricing power. However, this strength does not fully carry through to returns on assets and equity, both of which fall below industry benchmarks. This suggests that while the company is good at generating profit from its sales, lower asset efficiency and higher leverage limit the returns ultimately delivered to investors. <span class="citation" data-cite="Investopedia — Profit Margin; Investopedia — ROA; Investopedia — ROE">⁷</span>.</p>
     </div>
   </div>
 </section>
@@ -460,11 +460,11 @@
   <h3 style="font-family:'Playfair Display',serif;font-size:2.2rem;margin-bottom:1.5rem;">Strategic Conclusions &amp; Recommendations</h3>
 
   <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
-    <p style="line-height:1.7;color:#374151;">Overall, Black Knight’s financial performance reflects many characteristics of a mature software company. Strong profitability metrics suggest effective cost management and value creation through scalable technology platforms <span class="citation" data-cite="Investopedia — Profit Margin; Investopedia — Software Business Model">⁸</span>.</p>
+    <p style="line-height:1.7;color:#374151;">Overall, Black Knight displays many of the traits of a mature software company, including strong margins and scalable technology platforms. That said, its liquidity and leverage metrics indicate less financial flexibility than many of its industry peers, which could become a concern in less favorable market conditions. <span class="citation" data-cite="Investopedia — Profit Margin; Investopedia — Software Business Model">⁸</span>.</p>
 
-    <p style="line-height:1.7;color:#374151;margin-top:1rem;">The firm’s balanced capital structure supports continued investment in software and data capabilities while maintaining manageable financial risk, as reflected in its leverage and interest coverage ratios <span class="citation" data-cite="Investopedia — Capital Structure; Black Knight, Inc. Form 10-K (2023)">⁹</span>.</p>
+    <p style="line-height:1.7;color:#374151;margin-top:1rem;">Looking ahead, Black Knight would benefit from improving liquidity and strengthening interest coverage to reduce financial risk and create more breathing room on the balance sheet. <span class="citation" data-cite="Investopedia — Capital Structure; Black Knight, Inc. Form 10-K (2023)">⁹</span>.</p>
 
-    <p style="line-height:1.7;color:#374151;margin-top:1rem;">Strategically, Black Knight should continue focusing on strengthening its core platforms, supporting long-term client relationships, and maintaining financial discipline. This approach positions the company to support sustainable shareholder value over time <span class="citation" data-cite="Black Knight, Inc. Form 10-K (2023)">¹⁰</span>.</p>
+    <p style="line-height:1.7;color:#374151;margin-top:1rem;">At the same time, continuing to invest in core platforms and long-term client relationships remains important. Balancing financial discipline with operational efficiency will be key to supporting sustainable shareholder value over time. <span class="citation" data-cite="Black Knight, Inc. Form 10-K (2023)">¹⁰</span>.</p>
   </div>
 </section>
 
