--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
       <div class="ratio-name">Current Ratio</div>
       <div class="ratio-value">1.27</div>
       <div class="ratio-industry">Industry: 1.96</div>
-      <div class="ratio-badge neutral">ADEQUATE-BELOW INDUSTRY</div>
+      <div class="ratio-badge neutral">ADEQUATE</div>
     </div>
 
     <div class="ratio-row">
