--- a/index.html
+++ b/index.html
@@ -436,7 +436,10 @@
   <div class="analysis-grid">
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Liquidity Analysis</div>
-      <p style="line-height:1.7;color:#374151;">Black Knight’s liquidity ratios suggest that while the company can meet its short-term obligations, its liquidity position is weaker than industry norms. The current ratio above 1 indicates basic short-term coverage; however, the quick ratio below 1 signals limited immediate liquidity compared to peers. This suggests a tighter liquidity position and a greater reliance on ongoing cash flows rather than liquid assets. <span class="citation" data-cite="Investopedia — Current Ratio; Investopedia — Quick Ratio">⁴</span>.</p>
+      <p style="line-height:1.7;color:#374151;">Black Knight’s (BKI) liquidity profile indicates a tighter short-term financial position than that of the Software & Programming industry, which has an average current ratio of 1.96. Although BKI’s current ratio of 1.27 exceeds the minimum threshold of 1.0, it is still significantly lower than the industry average. This indicates a limited buffer of current assets compared to short-term liabilities and highlights the company's relative liquidity position and potential vulnerabilities.
+The company’s quick ratio of 0.76 further reinforces this concern. Unlike the current ratio, the quick ratio excludes less liquid assets and provides a more conservative view of liquidity. BKI’s quick ratio is not only below the industry average of 1.76, but also below 1.0, indicating that the firm cannot fully cover short-term obligations using its most liquid assets alone. As a result, BKI appears more reliant on continued operating cash flows rather than readily available liquidity to meet near-term commitments.
+Although Black Knight does not seem to be experiencing immediate liquidity issues, its liquidity position is notably weaker compared to its industry peers. This limited liquidity reduces financial flexibility and increases vulnerability to short-term operational or market disruptions.
+ <span class="citation" data-cite="Investopedia — Current Ratio; Investopedia — Quick Ratio">⁴</span>.</p>
     </div>
 
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
