--- a/index.html
+++ b/index.html
@@ -521,9 +521,9 @@
     <div class="ratio-group" style="background:#f6f1e7;padding:2rem;border-radius:18px;">
       <div class="ratio-group-title">Profitability Analysis</div>
       <p style="line-height:1.7;color:#374151;">Profitability is one of Black Knight’s strongest areas of financial performance, particularly when evaluated through profit margin. The company boasts a profit margin of 29%, which is significantly higher than the industry average of 19%. This demonstrates effective cost control and strong pricing power. It indicates that Black Knight is successful in converting revenue into profit, a crucial advantage in the software industry where scalable platforms can enhance profit margins <span class="citation" data-cite="Investopedia — Profit Margin; Investopedia — ROA; Investopedia — ROE">⁷</span>.</p>
-      <section id="efficiency" class="reveal" style="margin:4rem 0;">
+      <p style="margin-bottom:1.25rem;">
       <p style="line-height:1.7;color:#374151;">However, this strong profit margin doesn't mean that Black Knight gives better overall returns. Its return on assets (ROA) is 8%, which is lower than the industry average of 12%. This difference shows that the company is not using its assets efficiently and has a high level of assets. The return on equity (ROE) is 18%, which is also below the industry average of 25%. This means shareholders get lower returns compared to those in similar companies.</p>
-     <section id="efficiency" class="reveal" style="margin:4rem 0;">
+      <p style="margin-bottom:1.25rem;">
      <p style="line-height:1.7;color:#374151;">These findings indicate that while Black Knight is highly profitable at the operational level, inefficiencies in asset utilization and the company’s leverage profile limit the extent to which profitability impacts asset and equity returns. Improving efficiency and enhancing balance sheet flexibility could likely boost overall profitability performance relative to its peers.</p>
     </div>
   </div>
