--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 }
 
 .sr-box {
-  background: #f6f1e7;
+  background: #ffffff;
   padding: 2rem;
   border-radius: 16px;
 }
@@ -237,11 +237,11 @@
 
 /* Visual distinction */
 .strengths {
-  border-left: 5px solid #16a34a; /* green */
+  border-left: 5px solid #c9a24d; /* gold */
 }
 
 .risks {
-  border-left: 5px solid #dc2626; /* red */
+  border-left: 5px solid #0f1c2e; /* navy */
 }
 
 /* Recommendations */
