--- a/index.html
+++ b/index.html
@@ -663,10 +663,10 @@
   <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Investopedia. (n.d.). <em>Financial ratio analysis.</em>. https://www.investopedia.com/terms/r/ratioanalysis.asp</p>
   <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Investopedia. (n.d.). <em>Liquidity ratios.</em>. https://www.investopedia.com/terms/l/liquidityratio.asp</p>
   <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Investopedia. (n.d.). <em>Profitability ratios.</em>. https://www.investopedia.com/terms/p/profitabilityratios.asp</p>
-
+  <p style="margin-bottom:1.25rem;">
    <div style="height:1px;background:rgba(15,28,46,0.15);max-width:1100px;margin:0 auto 2rem;"></div>
   <footer>
-  <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Financial Ratio Analysis Project • Prepared by Jacquelyn Swindell • Academic Use Only
+  <p style="font-size:0.85rem;color:#4b5563;line-height:1.6;">Financial Ratio Analysis Project | Prepared by Jacquelyn Swindell | Academic Use Only
 </footer>  
   
 <style>
